# logistic

./: .env.example  .gitignore  Dockerfile  Makefile  Plan.txt  README.md  add_translate_tags.py  add_translate_tags_v2.py  add_translate_tags_v3.py  collect_code.py  db.sqlite3  deploy-ssl-simple.sh  deploy-ssl.sh  deploy.sh  docker-compose.debug.yml  docker-compose.yml  docker-comprose.yml  manage.py  pyproject.toml  requirements.txt
apps/core/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  (+2 more)
apps/dashboard/: apps.py  urls.py  views.py
apps/documents/: admin.py  apps.py  models.py  urls.py  views.py
apps/geo/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/orders/: admin.py  api.py  apps.py  forms.py  models.py  routing.py  urls.py  views.py
apps/partners/: admin.py  apps.py  models.py  urls.py  views.py
apps/services/: admin.py  apps.py  models.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
baikal/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: entrypoint.sh
deploy/nginx/: Dockerfile  default.conf
fixtures/: initial_data.json
nginx/: default.conf
static/css/: styles.css
static/js/: app.js
templates/: 404.html  500.html  base.html
templates/partials/: _calculator_results.html  _profile_nav.html  _tracking_results.html
templates/templatetags/: i18n_extras.py
tests/: test_forms.py  test_maps.py  test_models.py  test_routing.py  test_stages.py  test_templates.py  test_urls.py
(+147 files in other folders)
