[project]
name = "baikal-service"
version = "1.0.0"
description = "Baikal-Service logistics web application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-htmx>=1.21.0",
    "pillow>=11.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.django]
settings = "baikal.settings"
